# chatify-server

./: .gitignore  README.md  prompts.json  pyproject.toml  requirements.txt
chatify_server/: AppManager.py  config.example.py  models.py  server.py
chatify_server/prompt_stores/: JSONFilePromptStore.py  PromptStore.py  __init__.py
chatify_server/response_providers/: __init__.py
